# ReDynELA

./: .gitignore  .gitmodules  DEVLOG.md
Samples/mapping/: 02_scalar_map_triangle.cpp
Sources/: CMakeLists.txt
Sources/Applications/DynELA_solve/: CMakeLists.txt  README.txt  element_2d.cpp  element_2d_contact.cpp  element_2d_contact_amr.cpp  main.C  test_contact_1time_rmsh.cpp  test_contact_solver_amr.cpp  test_tri.cpp
Sources/Libraries/: CMakeLists.txt
Sources/Libraries/basicTools/: List.h
Sources/Libraries/finiteElement/: CMakeLists.txt  Contact.C  Coulomb.C  Domain.C  Edge.C.txt  ElTri3n2D.C  ElTri3nAx.C  ElTri3nAx.h  Element.h  Element2D.C  ElementAx.C  Elements.h  ExplicitSolver.C  ExplicitSolverRmsh.C  ExplicitSolverRmsh.h  Interface.C  Jobs.C  Mesher.C  Mesher.h  Side.C  Structure.C  Structure.h  VtkInterface.C  VtkInterface.h  femLibrary.h  io_Structure.C  test.diff  tethex.C
Sources/Libraries/lsdyna/: lsdynaReader.h
Sources/tests/: test_amr_1.cpp
amr/: mmg_notes.txt  ref.cxx
